# Playwright-Pytest-Amazon_de-Demo

./: .env.example  .gitignore  README.md  conftest.py  pyproject.toml  pytest.ini  requirements.txt
.github/workflows/: ci.yml
docs/: RUNBOOK_README.txt  TEST_COVERAGE.txt
src/api/: api_client.py
src/api_demo/: client.py  endpoints.py  models.py
src/core/: artifacts.py  config.py  logger.py
src/pages/: base_page.py  cart_page.py  home_page.py  product_page.py  search_results_page.py
src/pages/components/: cookie_banner.py  header.py  search_results_list.py
tests/amazon_network/regression/: test_search_network_status_code.py
tests/amazon_network/smoke/: test_search_network_smoke.py
tests/api_demo/edge/: test_get_non_existing_user.py
tests/api_demo/regression/: test_get_users_schema.py
tests/api_demo/smoke/: test_get_users_smoke.py
tests/ui/checks/: test_cart_page_accessible.py  test_header_cart_icon_visible.py  test_header_logo_visible.py  test_header_search_bar_visible.py  test_search_results_minimum_count.py  test_search_term_reflected_in_url.py
tests/ui/e2e/: test_search_to_cart_e2e.py
tests/ui/edge/: test_empty_cart_page.py  test_search_with_empty_input.py  test_search_with_special_ characters.py
tests/ui/regression/: test_search_with_enter_key.py  test_search_with_long_string.py
tests/ui/smoke/: test_home_search_smoke.py  test_search_results_smoke.py
