[project]
name = "playwright-pytest-amazon-de"
version = "0.1.0"
description = "Playwright + Pytest reference test automation framework (UI + API)"
requires-python = ">=3.13"
readme = "README.md"
license = { text = "MIT" }

[tool.black]
line-length = 100
target-version = ["py313"]

[tool.ruff]
line-length = 100
target-version = "py313"
select = ["E", "F", "W", "I"]
exclude = [
    ".git",
    ".venv",
    "__pycache__",
    "node_modules",
]

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-ra"
testpaths = ["tests"]

